@startuml
!theme plain

entity ventas {
  *id : bigserial NOT NULL,
  --
  fecha : date NOT NULL,
  NOT : NULL,
  NOT : NULL DEFAULT
  impuesto : numeric(15, 2) NOT NULL DEFAULT
  total : numeric(15, 2) NOT NULL,
  cliente_id : bigint NOT NULL,
  estado_documento_id : bigint NOT NULL,
  tipo_pago_id : bigint,
  requiere_envio : boolean NOT NULL DEFAULT false,
  estado_logistico : character varying(255) COLLATE pg
  created_at : timestamp(0) without time zone,
}

entity detalle_ventas {
  *id : bigserial NOT NULL,
  --
  producto_id : bigint NOT NULL,
  precio_unitario : numeric(15, 2) NOT NULL,
  NOT : NULL DEFAULT
  subtotal : numeric(15, 2) NOT NULL,
  updated_at : timestamp(0) without time zone,
}

entity proformas {
  *id : bigserial NOT NULL,
  --
  fecha : date NOT NULL,
  subtotal : numeric(15, 2) NOT NULL,
  NOT : NULL DEFAULT
  impuesto : numeric(15, 2) NOT NULL DEFAULT
  total : numeric(15, 2) NOT NULL,
  observaciones_rechazo : text COLLATE pg
  estado : character varying(255) COLLATE pg
  canal_origen : character varying(255) COLLATE pg
  usuario_creador_id : bigint,
  fecha_aprobacion : timestamp(0) without time zone,
  moneda_id : bigint NOT NULL,
  ubicacion_entrega : json,
  fecha_respuesta : timestamp(0) without time zone,
  comentario_rechazo : text COLLATE pg
  aprobado_por : bigint,
  updated_at : timestamp(0) without time zone,
}

entity detalle_proformas {
  *id : bigserial NOT NULL,
  --
  producto_id : bigint NOT NULL,
  precio_unitario : numeric(15, 2) NOT NULL,
  NOT : NULL DEFAULT
  subtotal : numeric(15, 2) NOT NULL,
  updated_at : timestamp(0) without time zone,
}

entity reservas_proforma {
  *id : bigserial NOT NULL,
  --
  stock_producto_id : bigint NOT NULL,
  fecha_reserva : timestamp(0) without time zone NOT NULL DEFAULT CURRENT
  fecha_expiracion : timestamp(0) without time zone,
  created_at : timestamp(0) without time zone,
}

entity pedidos {
  *id : bigserial NOT NULL,
  --
  cliente_id : bigint NOT NULL,
  fecha_entrega_requerida : date,
  subtotal : numeric(18, 2) NOT NULL DEFAULT
  total : numeric(18, 2) NOT NULL DEFAULT
  observaciones : character varying(255) COLLATE pg
  direccion_entrega : character varying(255) COLLATE pg
  latitud_entrega : double precision,
  estado_id : bigint,
  updated_at : timestamp(0) without time zone,
}

entity detalles_pedido {
  *id : bigserial NOT NULL,
  --
  producto_id : bigint NOT NULL,
  precio_unitario : numeric(18, 2) NOT NULL,
  NOT : NULL,
  updated_at : timestamp(0) without time zone,
}

entity facturas_electronicas {
  *id : bigserial NOT NULL,
  --
  numero_factura : character varying(255) COLLATE pg
  nit_emisor : character varying(255) COLLATE pg
  fecha_emision : date NOT NULL,
  monto_total : numeric(15, 2) NOT NULL,
  NOT : NULL DEFAULT
  monto_total_moneda_extranjera : numeric(15, 2) NOT NULL DEFAULT
  tipo_cambio : numeric(10, 4) NOT NULL DEFAULT
  codigo_moneda : integer NOT NULL DEFAULT 1,
  modalidad : character varying(255) COLLATE pg
  tipo_emision : character varying(255) COLLATE pg
  tipo_factura_documento : character varying(255) COLLATE pg
  estado : character varying(255) COLLATE pg
  codigo_recepcion : character varying(255) COLLATE pg
  xml_firmado : text COLLATE pg
  respuesta_sin : text COLLATE pg
  fecha_envio_sin : timestamp(0) without time zone,
  observaciones_sin : text COLLATE pg
  venta_id : bigint NOT NULL,
  updated_at : timestamp(0) without time zone,
}

entity libro_ventas_iva {
  *id : bigserial NOT NULL,
  --
  numero_factura : character varying(255) COLLATE pg
  numero_autorizacion : character varying(255) COLLATE pg
  nit_ci_cliente : character varying(255) COLLATE pg
  razon_social_cliente : character varying(255) COLLATE pg
  importe_total : numeric(15, 2) NOT NULL,
  NOT : NULL DEFAULT
  importe_iehd : numeric(15, 2) NOT NULL DEFAULT
  importe_ipj : numeric(15, 2) NOT NULL DEFAULT
  tasas : numeric(15, 2) NOT NULL DEFAULT
  importe_gift_card : numeric(15, 2) NOT NULL DEFAULT
  descuentos : numeric(15, 2) NOT NULL DEFAULT
  importe_base_cf : numeric(15, 2) NOT NULL DEFAULT
  credito_fiscal : numeric(15, 2) NOT NULL DEFAULT
  estado_factura : character varying(255) COLLATE pg
  codigo_control : character varying(255) COLLATE pg
  venta_id : bigint NOT NULL,
  created_at : timestamp(0) without time zone,
}

entity cuentas_por_cobrar {
  *id : bigserial NOT NULL,
  --
  cliente_id : bigint NOT NULL,
  NOT : NULL,
  NOT : NULL,
  dias_vencido : integer NOT NULL DEFAULT 0,
  created_at : timestamp(0) without time zone,
}

entity venta_impuestos {
  *id : bigserial NOT NULL,
  --
  impuesto_id : bigint NOT NULL,
  NOT : NULL,
  NOT : NULL,
  NOT : NULL,
  updated_at : timestamp(0) without time zone,
}

entity clientes {
  *id : bigserial NOT NULL,
  --
  razon_social : character varying(255) COLLATE pg
  nit : character varying(255) COLLATE pg
  telefono : character varying(255) COLLATE pg
  email : character varying(255) COLLATE pg
  activo : boolean NOT NULL DEFAULT true,
  foto_perfil : character varying(255) COLLATE pg
  ci_anverso : character varying(255) COLLATE pg
  ci_reverso : character varying(255) COLLATE pg
  limite_credito : numeric(18, 2) NOT NULL DEFAULT
  user_id : bigint,
  longitud : numeric(11, 8),
  codigo_cliente : character varying(20) COLLATE pg
}

cuentas_por_cobrar }o--|| clientes : cliente_id -> id
cuentas_por_cobrar }o--|| ventas : venta_id -> id
detalle_proformas }o--|| proformas : proforma_id -> id
detalle_ventas }o--|| ventas : venta_id -> id
detalles_pedido }o--|| pedidos : pedido_id -> id
facturas_electronicas }o--|| ventas : venta_id -> id
libro_ventas_iva }o--|| ventas : venta_id -> id
pedidos }o--|| clientes : cliente_id -> id
proformas }o--|| clientes : cliente_id -> id
reservas_proforma }o--|| proformas : proforma_id -> id
venta_impuestos }o--|| ventas : venta_id -> id
ventas }o--|| clientes : cliente_id -> id
ventas }o--|| proformas : proforma_id -> id
@enduml